feat: update to myflow v1.3.0